# real_bpm_tuning_tool_v2

./: .gitignore  AGENTS.md  README.md  Requirements.md  bpm_config_1.json  bpm_tuner_app.py  build_one_exe.bat  fleet.txt  pyproject.toml
.agents/: config.toml
99_ reference/: fleet_optimizer.py  lib.rs
Capacitors_BOM/: GJM0225C1E100GB01_DC0V_25degC_series.s2p  GJM0225C1E110GB01_DC0V_25degC_series.s2p  GJM0225C1E120GB01_DC0V_25degC_series.s2p  GJM0225C1E130GB01_DC0V_25degC_series.s2p  GJM0225C1E150GB01_DC0V_25degC_series.s2p  GJM0225C1E160GB01_DC0V_25degC_series.s2p  GJM0225C1E180GB01_DC0V_25degC_series.s2p  GJM0225C1E1R0BB01_DC0V_25degC_series.s2p  GJM0225C1E1R1BB01_DC0V_25degC_series.s2p  GJM0225C1E1R2BB01_DC0V_25degC_series.s2p  GJM0225C1E1R3BB01_DC0V_25degC_series.s2p  GJM0225C1E1R4BB01_DC0V_25degC_series.s2p  GJM0225C1E1R5BB01_DC0V_25degC_series.s2p  GJM0225C1E1R6BB01_DC0V_25degC_series.s2p  GJM0225C1E1R7BB01_DC0V_25degC_series.s2p  GJM0225C1E1R8BB01_DC0V_25degC_series.s2p  GJM0225C1E1R9BB01_DC0V_25degC_series.s2p  GJM0225C1E200GB01_DC0V_25degC_series.s2p  GJM0225C1E220GB01_DC0V_25degC_series.s2p  GJM0225C1E2R0BB01_DC0V_25degC_series.s2p  GJM0225C1E2R1BB01_DC0V_25degC_series.s2p  GJM0225C1E2R2BB01_DC0V_25degC_series.s2p  GJM0225C1E2R3BB01_DC0V_25degC_series.s2p  GJM0225C1E2R4BB01_DC0V_25degC_series.s2p  GJM0225C1E2R5BB01_DC0V_25degC_series.s2p  GJM0225C1E2R6BB01_DC0V_25degC_series.s2p  GJM0225C1E2R7BB01_DC0V_25degC_series.s2p  GJM0225C1E2R8BB01_DC0V_25degC_series.s2p  GJM0225C1E2R9BB01_DC0V_25degC_series.s2p  GJM0225C1E3R0BB01_DC0V_25degC_series.s2p  (+77 more)
(+98 files in other folders)
