[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "real-bpm-tuning-tool"
version = "0.1.0"
description = "Production-aware multiport RF impedance tuning with scikit-rf and Rust"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
  "PyQt5>=5.15",
  "scikit-rf>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
bpm-tuner = "bpm_tuner.cli:main"

[tool.setuptools]
packages = ["bpm_tuner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
